2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): When recovering from
	error, try to recover from the position next to the last break,
	rather than right at the crash position. We care the input string,
	not what it's being partially matched against.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_recover): When checking a character in
	text, brk pos returned from brk_recover_try() are relative to
	'text + p', not 'text'.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Split normal word break and recovery routines apart.

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl, +brk_recover_try):
	  - Split brk_maximal_do_impl() into itself with (do_recover == 1) and
	    brk_recover_try() with (do_recover == 0), for logic simplification.
	  - Strip unnecessary tasks like best break contests and penalties from
	    brk_recover_try(). All it needs is existence of a solution,
	    regardless of its quality.
	  - Use memcpy() to copy brk pos arrays instead of for loop.
	* src/thbrk/brk-maximal.c (brk_maximal_do, brk_recover):
	  - Adjust calls to brk_maximal_do_impl() and brk_recover_try()
	    according to the changed prototypes.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): Add one missing change
	for last commit.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): Update 'shot' after
	'node' is changed, instead of referencing through the possibly new
	'node' value, for code readability.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Beautify code.

	* src/thbrk/brk-maximal.c (th_brkpos_hints): Adjust indents.
	* src/thbrk/brk-maximal.c (brk_recover): Adjust brackets.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (th_brkpos_hints): Add check for cases like